script para inserir os dados

--- a/PI/report/report.tex
+++ b/PI/report/report.tex
@@ -170,7 +170,7 @@ Aqui está um exemplo de \emph{input} válido para a gramática desenvolvida.
 \end{verbatim}
 \section{Linguagem de anotação para descrição das Actividades}
 O \emph{Schema} (na figura \ref{fig:cv_activities}) desenvolvido para a descrição de actividades, teve também por modelo o que já tínhamos definido para a Base de Dados, para tentar equilibrar os dados que poderiam ser guardados e os que seriam enviados.\\
-Um facto bastante relevante é permitir que uma actividade esteja relacionada com mais que um utilizador, podendo descrevê-lo como utilizador do sistema, ou não utilizador. No entanto o utilizador que está a submeter a informação sobre actividades não necessita de indicar directamente se o utilizador é ou não utilizador da plataforma. A própria plataforma, recorrendo a um script perl irá determinar com base na similaridade do nome apresentado, com os nomes totais dos utilizadores na plataforma, o utilizador a que se refere. No caso de conseguir um grau de probabilidade superior a 80\% no nome obtido, será considerado esse utilizador. Caso contrário será acrescentado como não utilizador da plataforma. Mas o utilizador que submeter terá sempre a possibilidade de alterar a referências a actividades suas. Também os outros utilizadores considerados parceiros nessa actividade podem optar por remover-se dessa mesma actividade.
+Um facto bastante relevante é permitir que uma actividade esteja relacionada com mais que um utilizador, podendo descrevê-lo como utilizador do sistema, ou não utilizador. No entanto o utilizador que está a submeter a informação sobre actividades não necessita de indicar directamente se o utilizador é ou não utilizador da plataforma. A própria plataforma, recorrendo a um script perl irá determinar com base na similaridade do nome apresentado, com os nomes totais dos utilizadores na plataforma, o utilizador a que se refere. No caso de conseguir um grau de probabilidade superior a 80\% no nome obtido, será considerado esse utilizador. Caso contrário será acrescentado como não utilizador da plataforma. Mas o utilizador que submeter terá sempre a possibilidade de alterar as suas referências a actividades. Também os outros utilizadores considerados parceiros nessa actividade podem optar por remover-se dessa mesma actividade.
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=0.70]{cv_activities_schema.eps}
@@ -179,7 +179,7 @@ Um facto bastante relevante é permitir que uma actividade esteja relacionada co
 \end{figure}
 
 \subsection{Processador}
-O processador para esta linguagem descrita pelo \emph{Schema} anterior foi desenvolvido em \emph{PHP} tendo em vista uma maior facilidade de manutenção e de criação. Poderíamos ter optado por algo como um \emph{XSL} mas isso obrigaria sempre a que a mesma gerasse ou código SQL, que seria depois utilizado por um script \emph{PHP}, ou então à geração do próprio código \emph{PHP}. Neste último caso o processamento seria mais extensivo porque primeiro teria que ser processado o \emph{XSL} e depois executado o \emph{PHP} por ele gerado. Por estes, resolvemos utilizar as ferramentas disponíveis na linguagem de programação, como o \emph{DOMDocument} e o \emph{DOMXpath}. Inclusivamente para ser mais fácil o processamento estendemos ligeiramente a classe \emph{DOMXpath} como podemos ver no excerto de código a seguir:
+O processador para esta linguagem descrita pelo \emph{Schema} anterior foi desenvolvido em \emph{PHP} tendo em vista uma maior facilidade de manutenção e de criação. Poderíamos ter optado por algo como um \emph{XSL} mas isso obrigaria sempre a que a mesma gerasse ou código SQL, que seria depois utilizado por um script \emph{PHP}, ou então à geração do próprio código \emph{PHP}. Neste último caso o processamento seria mais extensivo porque primeiro teria que ser processado o \emph{XSL} e depois executado o \emph{PHP} por ele gerado. Por estes motivos, resolvemos utilizar as ferramentas disponíveis na linguagem de programação \emph{PHP}, como o \emph{DOMDocument} e o \emph{DOMXpath}. Inclusivamente para ser mais fácil o processamento extendemos ligeiramente a classe \emph{DOMXpath} como podemos ver no excerto de código a seguir:
 \begin{verbatim}
    class myXPath extends DOMXPath{
         const RES = 'RETURNRES';
